[package]
name = "knowit-julekalender"
version = "0.1.0"
authors = ["kalvatn"]
edition = "2018"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "2020-01"
path = "src/bin/2020/01.rs"

[[bin]]
name = "2020-02"
path = "src/bin/2020/02.rs"

[[bin]]
name = "2020-03"
path = "src/bin/2020/03.rs"

[[bin]]
name = "2020-04"
path = "src/bin/2020/04.rs"

[[bin]]
name = "2020-05"
path = "src/bin/2020/05.rs"

[[bin]]
name = "2020-06"
path = "src/bin/2020/06.rs"

[[bin]]
name = "2020-07"
path = "src/bin/2020/07.rs"

[[bin]]
name = "2020-08"
path = "src/bin/2020/08.rs"

[dependencies]
md5 = "0.7.0"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.9", features = ["blocking"]}
regex = "1.3.9"
lazy_static = "1.4.0"
petgraph = "0.5.1"
serde_json = "1.0"
itertools = "0.9.0"
primes = "0.3.0"
